FIX Update element editor interface padding, margins and alignment to match original designs

--- a/client/src/components/ElementEditor/Content.scss
+++ b/client/src/components/ElementEditor/Content.scss
@@ -1,12 +1,14 @@
 .element-editor-content {
   display: flex;
-  margin-left: 33px; // header icon + 5px margin of title
+  margin-top: $spacer;
+  margin-left: 42px; // header icon + margin of title
   align-items: center;
 
   &__thumbnail-image {
-    border-radius: .192rem;
+    border-radius: $thumbnail-border-radius;
     height: 48px;
-    margin-right: 5px;
+    margin-top: -$spacer-sm;
+    margin-right: $spacer-sm;
   }
 
   &__content {
